@@ -10,9 +10,9 @@ name="GENERATOR" />
 <link rel="StyleSheet" type="text/css" href="layout1.css" />
 <title>SNMP Trap Translator</title>
 </head></p>
-<h1>SNMP Trap Translator v1.5beta1</h1>
+<h1>SNMP Trap Translator v1.5beta2</h1>
 <p><strong>(<a href="http://www.snmptt.org">SNMPTT</a>)</strong></p>
-<p>This file was last updated on: March 25th, 2021</p>
+<p>This file was last updated on: April 3rd, 2021</p>
 <p><a href="#License">License</a></p>
 <p><a href="#What-is-it">SNMPTT</a></p>
 <ul>
@@ -244,7 +244,13 @@ table {
 </tr>
 <tr>
 <td align="left">Optional</td>
-<td align="left"><a href="https://metacpan.org/pod/Sys::Syslog">Sys::Syslog</a> module (included with most Unix distributions). Required for Syslog support.</td>
+<td align="left"><a href="https://metacpan.org/pod/Sys::Syslog">Sys::Syslog</a> module (included with most Unix distributions). Required for Syslog support using Unix sockets (local syslog).</td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left">Optional</td>
+<td align="left"><a href="https://metacpan.org/pod/Log::Syslog::Fast">Log::Syslog::Fast</a> and <a href="https://metacpan.org/pod/Log::Syslog::Constants">Log::Syslog::Constants</a> modules. Required for remote syslog and RFC5424 support.</td>
 <td align="left"></td>
 <td align="left"></td>
 </tr>
@@ -313,7 +319,16 @@ table {
   traps are handled when they do not match due to MATCH and NODES.  If set to 1,
   traps are considered skipped instead of unknown.  Statistics now include the
   number of skipped traps.</li>
-<li>Add support wildcards in the <strong>snmptt.ini</strong> setting <strong>snmptt_conf_files</strong>.  Example: /etc/snmp/snmptt.*.conf</li>
+<li>Add support for wildcards in the <strong>snmptt.ini</strong> setting <strong>snmptt_conf_files</strong>.  Example: /etc/snmp/snmptt.*.conf</li>
+<li>Varbind types Gauge32 and Hex-STRING now have the 'Gauge32: ' and
+  'Hex-STRING: ' text removed for incoming traps in snmptthandler-embedded
+  along with unicode line endings (Perl 5.10 and higher).</li>
+<li>Added <strong>log_format</strong> snmptt.ini setting to allow you to define the STDOUT, text log and eventlog text format.</li>
+<li>Added <strong>syslog_format</strong> snmptt.ini setting to allow you to define the syslog text format.  This will allow you to add a structured data section for RFC5424 syslog.</li>
+<li>Added variable substitution <strong>$j</strong> to pull out the enterprise number from the full enterprise OID.  For example, for enterprise OID .1.3.6.1.4.1.232, <strong>$j</strong> would
+  contain 232.</li>
+<li>Added remote syslog support using the Perl module Log::Syslog::Fast which also allows you to specify the APP-NAME for RFC5424 syslog.
+  Added the following snmptt.ini settings: <strong>syslog_module</strong>, <strong>syslog_remote_dest</strong>, <strong>syslog_remote_port</strong>, <strong>syslog_remote_proto</strong>, <strong>syslog_rfc_format</strong>, <strong>syslog_app</strong> and <strong>syslog_system_app</strong>.</li>
 <li><strong>snmptthandler-embedded</strong>:<ul>
 <li>Varbind types <strong>Gauge32</strong> and <strong>Hex-STRING</strong> now have the Gauge32: and Hex-STRING: text removed for incoming traps.  Unicode line endings are also removed (Perl 5.10 and higher).</li>
 </ul>
@@ -1416,7 +1431,9 @@ Options:
 <pre><code>stdout_enable
 log_enable
 log_file
+log_format
 </code></pre>
+<p>The output format can be changed from the above default by modifying the <strong>log_format</strong> setting.  See snmptt.ini for details.</p>
 <h2><a name="LoggingUnknown"></a>Logging - Unknown traps</h2>
 <p>Logging of unrecognized traps is possible.  This would be used mainly for troubleshooting purposes.</p>
 <p>To configure unknown trap logging, edit the snmptt.ini file and modify the following variables:</p>
@@ -1434,7 +1451,17 @@ unknown_trap_log_file
 <pre><code>syslog_enable
 syslog_facility
 syslog_level
+syslog_module
+syslog_remote_dest *
+syslog_remote_port *
+syslog_remote_proto *
+syslog_rfc_format *
+syslog_app *
+syslog_format
 </code></pre>
+<p>(*) Only applicable when using <strong>syslog_module</strong> = 1</p>
+<p>When using the default <strong>syslog_module</strong> setting of 0, syslog messages are logged to the local system using Unix sockets following the RFC3164 standard.</p>
+<p>To enable RFC5424 or remote syslog server support, set <strong>syslog_module</strong> to 1 and define the (*) settings.  Be sure to enable UDP or TCP syslog reception in your syslog server.  See snmptt.ini for details on each setting.</p>
 <p>SNMPTT system errors and messages such as startup, shutdown, trap statistics etc can be sent to syslog by editing the snmptt.ini file and modifying the following variables:</p>
 <pre><code>syslog_system_enable
 syslog_system_facility
@@ -1885,13 +1912,14 @@ $c - Category<br />
 $C - Trap community string<br />
 $D - Description text from SNMPTT.CONF or MIB file (<strong>see Note 6</strong>)<br />
 $E - Enterprise trap OID in symbolic format<br />
-$e  - Enterprise trap OID in number format<br />
+$e  - Enterprise trap OID in number format (.1.3.6.1.4.1.<em>n</em>)<br />
+$j  - Enterprise number (<em>n</em>)<br />
 $Fa  - alarm (bell) (BEL)<br />
 $Ff  - form feed (FF)<br />
 $Fn  - newline (LF, NL)<br />
 $Fr  - return (CR)<br />
 $Ft  - tab (HT, TAB)<br />
-$Fz  - Translated FORMAT line (EXEC only)<br />
+$Fz  - Translated FORMAT line (EXEC, log_format and syslog_format only)<br />
 $G  - Generic trap number (0 if enterprise trap)<br />
 $S  - Specific trap number (0 if generic trap)<br />
 $H  - Host name of the system running SNMPTT<br />
