@@ -302,9 +302,7 @@ log_enable = 1
 
 # Custom format for text logging and syslog.  Defaults to: $O $s "$c" $A - $Fz
 # which translates to: trap-oid severity category hostname - translated-trap
-# Example for RFC5424 formatted key pairs:
-# [Trap="$O" Severity="$s" Category="$c" Hostname="$A"] $Fz
-log_format = $O $s "$c" $A - $Fz
+log_format = 
 
 # Log file location.  The COMPLETE path and filename.  Ex: '/var/log/snmptt/snmptt.log'
 log_file = /var/log/snmptt/snmptt.log
@@ -351,8 +349,8 @@ statistics_interval = 0
 # Set to 0 to use the Sys::Syslog module which allows for logging to the local 
 # syslog via Unix sockets.  Remote syslog servers are not supported.
 # Set to 1 to use the Log::Syslog::Fast module for logging to remote systems
-# over UDP or TCP using RFC3164 or the newer RFC5424 which supports additional
-# fields.
+# (or localhost) over UDP or TCP using RFC3164 or the newer RFC5424 which
+# supports to 'APP-NAME' field.  Also see the log_format setting.
 syslog_module = 0
 
 # Remote syslog server hostname or IP address when. Requires syslog_module = 1.
@@ -380,8 +378,17 @@ syslog_rfc_format = 0
 # Windows users should disable this.
 syslog_enable = 1
 
-# Remote syslog 'app' name when using LOG_RFC5424.
+# Remote syslog APP-NAME name when using LOG_RFC5424.
 syslog_app = snmptt
+
+# Custom format for text logging and syslog.  Defaults to: $O $s "$c" $A - $Fz
+# which translates to: trap-oid severity category hostname - translated-trap
+# Example for syslog RFC5424 formatted key pairs with an SD-ID of 
+# SNMPTT@enterprise#:
+# [SNMPTT@$j Trap="$O" Severity="$s" Category="$c" Hostname="$A"] $Fz
+# See section 6.3.2 of RFC5424 for details on the SD-ID.  32473 is an example
+# enterpriseId which you may need to change in your environment
+syslog_format = 
 
 # Syslog facility to use for logging of *TRAPS*.  For example: 'local0'
 syslog_facility = local0
@@ -419,7 +426,7 @@ syslog_level = warning
 # Sys::Syslog module then disable this.  Windows users should disable this.
 syslog_system_enable = 1
 
-# Remote syslog 'app' name when using LOG_RFC5424.
+# Remote syslog APP-NAME name when using LOG_RFC5424.
 syslog_system_app = snmptt-sys
 
 # Syslog facility to use for logging of *SNMPTT system errors*.  For example: 'local0'
