@@ -10,8 +10,13 @@ April 2nd, 2021: Alex Burger <alex_b@users.sourceforge.net>
   Choo for the code.
 - Added remote syslog support using the Perl module Log::Syslog::Fast and
   Log::Syslog::Constants.
-- Added log_format snmptt.ini setting to allow you to define the text log
-  and syslog text format.
+- Added log_format snmptt.ini setting to allow you to define the STDOUT, text
+  log and eventlog text format.
+- Added syslog_format snmptt.ini setting to allow you to define the syslog text
+  format.
+- Added variable substitution $j to pull out the enterprise number from the
+  full enterprise OID.  Example: For enterprise OID .1.3.6.1.4.1.232, $j would
+  contain 232.
 
 March 29th, 2021: Alex Burger <alex_b@users.sourceforge.net>
 - Changed version to snmptt_1.5beta2
